# AISD_EXAM

./: .gitignore  README.md
Коды/: CMakeLists.txt  bubble_shaker_quick_sort.cc  double_linked_list.cc  insertion_sort.cc  search.cc  shell_and_selction_sort.cc  single_linked_list.cc  СMakeLists.txt
